--- a/thesis.bib
+++ b/thesis.bib
@@ -1,3 +1,11 @@
+@software{bossdata,
+  author = {{David Kirkby}},
+  title = {bossdata},
+  url = {https://bossdata.readthedocs.io/},
+  version = {0.3.1},
+  date = {2018-04-25},
+}
+
 @misc{Kirkby_21,
   title = {desihub/specsim: August 2020 Release (Version v0.14)},
   author = {Kirkby, David, and others},
@@ -56,5 +64,14 @@
    year={2013},
    month={Jul},
    pages={32}
+}
+
+@misc{Rowe_2015,
+      title={GalSim: The modular galaxy image simulation toolkit}, 
+      author={Barnaby Rowe and Mike Jarvis and Rachel Mandelbaum and Gary M. Bernstein and James Bosch and Melanie Simet and Joshua E. Meyers and Tomasz Kacprzak and Reiko Nakajima and Joe Zuntz and Hironao Miyatake and Joerg P. Dietrich and Robert Armstrong and Peter Melchior and Mandeep S. S. Gill},
+      year={2015},
+      eprint={1407.7676},
+      archivePrefix={arXiv},
+      primaryClass={astro-ph.IM}
 }
 
